<resources>
    <string name="app_name">Inventory Savers</string>
    <string name="main_activity_title" />
    <string name="main_activity" />
    <string name="pasando_a_menu">Pasando a menú</string>
    <string name="usuario_registrado">Usuario registrado, pasando a menú</string>
    <string name="ir_a_registro">Ir a registro</string>
    <string name="ir_a_main">Pasando a main</string>
    <string name="pasando_a_productos">Pasando a productos</string>
    <string name="pasando_a_almacenes">Pasando a almacenes</string>
    <string name="pasando_a_usuarios">Pasando a usuarios</string>
    <string name="pasando_a_reportes">Pasando a reportes</string>
    <string name="pasando_a_eventos">Pasando a eventos</string>
    <string name="toast_dirigir_opciones">Dirigiendo a opciones</string>
    <string name="toast_dirigir_menu">Dirigiendo a menu</string>
    <string name="toast_scan">Haciendo el scan</string>
    <string name="toast_print">Haciendo el print</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="almacenes">Almacenes</string>
    <string name="lista">Lista</string>
    <string name="lista_usuarios">Lista de usuarios</string>
    <string name="listaAlmacenes">Lista de Almacenes</string>
    <string name="crearUsuario">Añadir nuevo usuario</string>
    <string name="gestionAlmacenes">Gestión de almacenes</string>
    <string name="gestionProductos">Gestión de productos</string>
    <string name="gestionUsuarios">Gestión de usuarios</string>
    <string name="crearAlmacenes">Añadir nuevo almacén</string>
    <string name="detalle">Detalle</string>
    <string name="editar">Editar</string>
    <string name="eventos">Eventos</string>
    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="usuarios">Usuarios</string>
    <string name="reportes">Reportes</string>
    <string name="productos_vencidos">Productos vencidos</string>
    <string name="vencimientos_proximos">Vencimientos próximos</string>
    <string name="perdidas">Pérdidas</string>
    <string name="eficiencia_almacenamiento">Eficiencia y almacenamiento</string>
    <string name="registro">Registro</string>
    <string name="name">Nombre:</string>
    <string name="mail">Correo:</string>
    <string name="register_button">Registrarse</string>
    <string name="back">Volver</string>
    <string name="productos">Productos</string>
    <string name="lista_productos">Lista</string>
    <string name="detalle_productos">Detalle</string>
    <string name="editar_productos">Editar</string>
    <string name="agregar_productos">Agregar</string>
    <string name="scan">Escanear</string>
    <string name="print">Imprimir</string>
    <string name="menu">Menú</string>
    <string name="opciones">Opciones</string>
    <string name="configuracion">Configuración</string>
    <string name="redes_sociales">Redes Sociales</string>
    <string name="inventrory_savers">Inventory Savers</string>
    <string name="input_prompt">Por favor, ingrese nombre de usuario y contraseña.</string>
    <string name="access_granted">Acceso concedido</string>
    <string name="error_username_password_incorrect">Nombre de usuario o contraseña incorrectos</string>
    <string name="error_username_not_registered">Usuario no registrado</string>
    <string name="title_activity_registro">Inventory Savers - Registro</string>
    <string name="username_in_use">Error: el nombre de usuario ya está en uso.</string>
    <string name="user_registered_successfully">Usuario registrado exitosamente</string>
    <string name="enter_username_email_password">Por favor, ingrese nombre de usuario, correo electrónico y contraseña.</string>
    <string name="register">Registrar</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login_button">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="mensaje_redes_sociales">Dirigiendo a redes sociales</string>
    <string name="error_auth">Error de autenticación</string>
</resources>